[gd_scene load_steps=4 format=3 uid="uid://cwgfgkd7omr05"]

[ext_resource type="Script" path="res://scripts/level.gd" id="1_k7s6h"]
[ext_resource type="AudioStream" uid="uid://cyf1xvrv42gou" path="res://flappy-bird-assets-master/audio/hit.wav" id="2_hsltk"]
[ext_resource type="AudioStream" uid="uid://cbua17ukbdlpk" path="res://flappy-bird-assets-master/audio/point.wav" id="3_mu4fe"]

[node name="Level" type="Node2D"]
script = ExtResource("1_k7s6h")

[node name="SpawnPoint" type="Marker2D" parent="."]
position = Vector2(130, 256)

[node name="GameOverMarker" type="Marker2D" parent="."]
visible = false
position = Vector2(49, 212)

[node name="GameStartMarker" type="Marker2D" parent="."]
position = Vector2(54, 110)

[node name="HitFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_hsltk")

[node name="PointFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_mu4fe")
